--- a/public/index.html
+++ b/public/index.html
@@ -2,105 +2,72 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Chatbot IA Gemini</title>
+  <title>Chat com Gemini</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white w-full max-w-md shadow-lg rounded-lg flex flex-col h-[90vh]">
-    <div id="chat" class="flex-1 overflow-y-auto p-4 space-y-4"></div>
-    <div class="border-t p-4 flex space-x-2 items-center">
-      <input type="file" id="inputImage" accept="image/*" class="hidden">
-      <button id="btnImage" class="text-gray-500 hover:text-gray-700">
-        📷
-      </button>
-      <textarea id="inputText" rows="1"
-        class="flex-1 border rounded px-3 py-2 resize-none focus:outline-none"
-        placeholder="Digite sua mensagem ou envie uma imagem"></textarea>
-      <button id="sendBtn"
-        class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">
-        Enviar
-      </button>
-    </div>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+  <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-xl space-y-4">
+    <h1 class="text-xl font-bold">Chat com Gemini</h1>
+
+    <div id="chat" class="space-y-4 max-h-96 overflow-y-auto border p-3 rounded bg-gray-50"></div>
+
+    <textarea id="inputText" placeholder="Digite uma mensagem..." rows="3" class="w-full border p-2 rounded"></textarea>
+    <input type="file" id="inputImage" accept="image/*" class="w-full" />
+    <button id="sendBtn" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
   </div>
 
-<script>
-  const chatEl = document.getElementById('chat');
-  const inputText = document.getElementById('inputText');
-  const inputImage = document.getElementById('inputImage');
-  const btnImage = document.getElementById('btnImage');
-  const sendBtn = document.getElementById('sendBtn');
-  let history = [];
+  <script>
+    const chat = document.getElementById('chat');
+    const inputText = document.getElementById('inputText');
+    const inputImage = document.getElementById('inputImage');
+    const sendBtn = document.getElementById('sendBtn');
 
-  btnImage.onclick = () => inputImage.click();
-
-  function addBubble(role, content, isImage=false) {
-    const wrapper = document.createElement('div');
-    wrapper.className = role === 'user'
-      ? 'flex justify-end'
-      : 'flex justify-start';
-    const bubble = document.createElement('div');
-    bubble.className = [
-      'max-w-[80%] p-2 rounded-lg',
-      role === 'user'
-        ? 'bg-blue-500 text-white rounded-br-none'
-        : 'bg-gray-200 text-gray-800 rounded-bl-none'
-    ].join(' ');
-    if (isImage) {
-      const img = document.createElement('img');
-      img.src = 'data:image/png;base64,' + content;
-      img.className = 'max-w-full rounded';
-      bubble.appendChild(img);
-    } else {
-      bubble.textContent = content;
-    }
-    wrapper.appendChild(bubble);
-    chatEl.appendChild(wrapper);
-    chatEl.scrollTop = chatEl.scrollHeight;
-  }
-
-  sendBtn.onclick = () => {
-    const text = inputText.value.trim();
-    const file = inputImage.files[0];
-    if (!text && !file) return;
-
-    if (text) {
-      addBubble('user', text);
-      history.push({ role: "user", message: text, is_image: false });
+    function appendMessage(role, content) {
+      const div = document.createElement('div');
+      div.className = role === 'user' ? 'text-right' : 'text-left';
+      div.innerHTML = `<div class="${role === 'user' ? 'bg-blue-100' : 'bg-gray-200'} p-2 rounded inline-block">${content}</div>`;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
     }
 
-    if (file) {
-      const reader = new FileReader();
-      reader.onload = () => {
-        const b64 = reader.result.split(',')[1];
-        addBubble('user', b64, true);
-        history.push({ role: "user", message: b64, is_image: true });
-        sendChat();
-      };
-      reader.readAsDataURL(file);
-    } else {
-      sendChat();
-    }
+    sendBtn.onclick = async () => {
+      const text = inputText.value.trim();
+      const file = inputImage.files[0];
 
-    inputText.value = '';
-    inputImage.value = '';
-  };
+      if (!text && !file) return;
 
-  function sendChat() {
-    fetch('/chat', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ history })
-    })
-    .then(res => res.json())
-    .then(data => {
-      history = data.history;
-      data.reply.parts.forEach(p => {
-        if (p.text) addBubble('model', p.text);
-        else if (p.image_base64) addBubble('model', p.image_base64, true);
+      appendMessage('user', text || '[Imagem enviada]');
+
+      let image_base64 = "";
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = async () => {
+          image_base64 = reader.result.split(',')[1];
+          await sendToServer(text, image_base64);
+        };
+        reader.readAsDataURL(file);
+      } else {
+        await sendToServer(text, "");
+      }
+
+      inputText.value = "";
+      inputImage.value = "";
+    };
+
+    async function sendToServer(message, image_base64) {
+      const res = await fetch('/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message, image_base64 })
       });
-    })
-    .catch(err => console.error(err));
-  }
-</script>
+      const data = await res.json();
+
+      if (data.reply) {
+        appendMessage('bot', data.reply);
+      } else {
+        appendMessage('bot', 'Erro: ' + (data.error?.message || 'sem resposta'));
+      }
+    }
+  </script>
 </body>
 </html>
